--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-rate-limit": "^5.1.3",
     "@types/hpp": "^0.2.6",
