fix: Replace Vercel secret reference with actual backend URL

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,6 +6,6 @@
   "framework": "nextjs",
   "regions": ["icn1"],
   "env": {
-    "NEXT_PUBLIC_API_URL": "@backend_url"
+    "NEXT_PUBLIC_API_URL": "https://r11-production.up.railway.app"
   }
 }
