fix: Update nixpacks.toml to use npm install instead of npm ci (no package-lock.json)

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,10 +2,13 @@
 nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = ["npm install --legacy-peer-deps"]
 
 [phases.build]
 cmds = ["npm run build"]
 
 [start]
 cmd = "npm start"
+
+[variables]
+NODE_ENV = "production"
