--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,8 @@
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "autoprefixer": "10.4.16",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.0.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.0.11",
